--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
     <main id="view-main-craftwaves">
   
-      <section class="cw-postcard-craftwaves" data-menu-inverse data-cursor="-inverse">
+      <section class="cw-postcard-craftwaves" >
         <div class="cw-postcard-bg-craftwaves"></div>
         <div class="cw-postcard-content-craftwaves -ct-craftwaves">
           <div class="cw-postcard-items-craftwaves">
