--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <div class="cw-loader-craftwaves cw-loader_overlay-craftwaves -visible">
+    <!-- <div class="cw-loader-craftwaves cw-loader_overlay-craftwaves -visible">
       <div class="cw-loader_overlay-fill-craftwaves"></div>
       <div class="cw-loader_overlay-box-craftwaves">
         <div class="cw-loader_overlay-word-craftwaves -v1"><span>We </span></div>
@@ -16,9 +16,9 @@
         </div>
         <div class="cw-loader_overlay-percent-craftwaves"><span>0%</span></div>
       </div>
-    </div>
+    </div> -->
  
-    <main id="view-main-craftwaves">
+    <main id="view-main-craftwaves" style="height: 100vh;width: 100vw; overflow: hidden;" class="cardanimation-craftwaves">
   
       <section class="cw-postcard-craftwaves" >
         <div class="cw-postcard-bg-craftwaves"></div>
