--- a/index.html
+++ b/index.html
@@ -18,72 +18,67 @@
       </div>
     </div> -->
  
-    <main id="view-main-craftwaves" style="height: 100vh;width: 100vw; overflow: hidden;" class="cardanimation-craftwaves">
-  
-      <section class="cw-postcard-craftwaves" >
-        <div class="cw-postcard-bg-craftwaves"></div>
-        <div class="cw-postcard-content-craftwaves -ct-craftwaves">
-          <div class="cw-postcard-items-craftwaves">
-            <div class="cw-postcard-item-craftwaves">
-              <div class="cw-postcard-item-back-craftwaves">
-                <div class="cw-postcard-item-title-craftwaves">
-                  Mobile<br />
-                  development
-                </div>
-                <div class="cw-postcard-item-tags-craftwaves">
-                  <div class="cw-postcard-item-tag-craftwaves">iOS</div>
-                  <div class="cw-postcard-item-tag-craftwaves">Android</div>
-                </div>
-                <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite -chevron-right-o-craftwaves">
-                    <use
-                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
-                    ></use>
-                  </svg>
-                </div>
-                <div class="cw-postcard-item-text-craftwaves">
-                  <p>
-                    Many years of expertise in mobile development allow us to
-                    design architecture and create bespoke native applications
-                    for Apple iOS and Google Android.
-                  </p>
-                </div>
+    <section class="cw-postcard-craftwaves">
+      <div class="cw-postcard-bg-craftwaves"></div>
+      <div class="cw-postcard-content-craftwaves -ct">
+        <div class="cw-postcard-items-craftwaves">
+          <div class="cw-postcard-item-craftwaves">
+            <div class="cw-postcard-item-back-craftwaves">
+              <div class="cw-postcard-item-title-craftwaves">
+                Mobile<br />
+                development
               </div>
-              <div class="cw-postcard-item-front-craftwaves">
-                <div class="cw-postcard-item-bg-craftwaves">
-                  <img
-                    src="https://cdn.cuberto.com/cb/hello/postcard/1.jpg"
-                    srcset="
-                      https://cdn.cuberto.com/cb/hello/postcard/1@2x.jpg 2x
-                    "
-                    loading="lazy"
-                    alt
-                  />
-                </div>
-                <div class="cw-postcard-item-title-craftwaves">
-                  Mobile<br />
-                  development
-                </div>
-                <div class="cw-postcard-item-tags-craftwaves">
-                  <div class="cw-postcard-item-tag-craftwaves">iOS</div>
-                  <div class="cw-postcard-item-tag-craftwaves">Android</div>
-                </div>
-                <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite -chevron-right-o-craftwaves">
-                    <use
-                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
-                    ></use>
-                  </svg>
-                </div>
+              <div class="cw-postcard-item-tags-craftwaves">
+                <div class="cw-postcard-item-tag-craftwaves">iOS</div>
+                <div class="cw-postcard-item-tag-craftwaves">Android</div>
+              </div>
+              <div class="cw-postcard-item-arr-craftwaves">
+                <svg class="cw-svgsprite -chevron-right-o-craftwaves">
+                  <use
+                    xlink:href="https://zaki879.github.io/cards/assets/sprites/svgsprites.svg"
+                  ></use>
+                </svg>
+              </div>
+              <div class="cw-postcard-item-text-craftwaves">
+                <p>
+                  Many years of expertise in mobile development allow us to
+                  design architecture and create bespoke native applications
+                  for Apple iOS and Google Android.
+                </p>
               </div>
             </div>
-         
+            <div class="cw-postcard-item-front-craftwaves">
+              <div class="cw-postcard-item-bg-craftwaves">
+                <img
+                  src="https://cdn.cuberto.com/cb/hello/postcard/1.jpg"
+                  srcset="
+                    https://cdn.cuberto.com/cb/hello/postcard/1@2x.jpg 2x
+                  "
+                  loading="lazy"
+                  alt
+                />
+              </div>
+              <div class="cw-postcard-item-title-craftwaves">
+                Mobile<br />
+                development
+              </div>
+              <div class="cw-postcard-item-tags-craftwaves">
+                <div class="cw-postcard-item-tag-craftwaves">iOS</div>
+                <div class="cw-postcard-item-tag-craftwaves">Android</div>
+              </div>
+              <div class="cw-postcard-item-arr-craftwaves">
+                <svg class="cw-svgsprite -chevron-right-o-craftwaves">
+                  <use
+                    xlink:href="https://zaki879.github.io/cards/assets/sprites/svgsprites.svg"
+                  ></use>
+                </svg>
+              </div>
+            </div>
           </div>
+       
         </div>
-      </section>
- 
-  
-    </main>
+      </div>
+    </section>
     <script src="assets/js/bundle.js" defer></script>
    
   </body>
