--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <!-- <div class="cw-loader-craftwaves cw-loader_overlay-craftwaves -visible">
+    <div class="cw-loader-craftwaves cw-loader_overlay-craftwaves -visible">
       <div class="cw-loader_overlay-fill-craftwaves"></div>
       <div class="cw-loader_overlay-box-craftwaves">
         <div class="cw-loader_overlay-word-craftwaves -v1"><span>We </span></div>
@@ -16,69 +16,232 @@
         </div>
         <div class="cw-loader_overlay-percent-craftwaves"><span>0%</span></div>
       </div>
-    </div> -->
+    </div>
  
-    <section class="cw-postcard-craftwaves">
-      <div class="cw-postcard-bg-craftwaves"></div>
-      <div class="cw-postcard-content-craftwaves -ct">
-        <div class="cw-postcard-items-craftwaves">
-          <div class="cw-postcard-item-craftwaves">
-            <div class="cw-postcard-item-back-craftwaves">
-              <div class="cw-postcard-item-title-craftwaves">
-                Mobile<br />
-                development
+    <main id="view-main-craftwaves">
+  
+      <section class="cw-postcard-craftwaves" data-menu-inverse data-cursor="-inverse">
+        <div class="cw-postcard-bg-craftwaves"></div>
+        <div class="cw-postcard-content-craftwaves -ct-craftwaves">
+          <div class="cw-postcard-items-craftwaves">
+            <div class="cw-postcard-item-craftwaves">
+              <div class="cw-postcard-item-back-craftwaves">
+                <div class="cw-postcard-item-title-craftwaves">
+                  Mobile<br />
+                  development
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">iOS</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Android</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
+                <div class="cw-postcard-item-text-craftwaves">
+                  <p>
+                    Many years of expertise in mobile development allow us to
+                    design architecture and create bespoke native applications
+                    for Apple iOS and Google Android.
+                  </p>
+                </div>
               </div>
-              <div class="cw-postcard-item-tags-craftwaves">
-                <div class="cw-postcard-item-tag-craftwaves">iOS</div>
-                <div class="cw-postcard-item-tag-craftwaves">Android</div>
-              </div>
-              <div class="cw-postcard-item-arr-craftwaves">
-                <svg class="cw-svgsprite -chevron-right-o-craftwaves">
-                  <use
-                    xlink:href="https://zaki879.github.io/cards/assets/sprites/svgsprites.svg"
-                  ></use>
-                </svg>
-              </div>
-              <div class="cw-postcard-item-text-craftwaves">
-                <p>
-                  Many years of expertise in mobile development allow us to
-                  design architecture and create bespoke native applications
-                  for Apple iOS and Google Android.
-                </p>
+              <div class="cw-postcard-item-front-craftwaves">
+                <div class="cw-postcard-item-bg-craftwaves">
+                  <img
+                    src="https://cdn.cuberto.com/cb/hello/postcard/1.jpg"
+                    srcset="
+                      https://cdn.cuberto.com/cb/hello/postcard/1@2x.jpg 2x
+                    "
+                    loading="lazy"
+                    alt
+                  />
+                </div>
+                <div class="cw-postcard-item-title-craftwaves">
+                  Mobile<br />
+                  development
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">iOS</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Android</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
               </div>
             </div>
-            <div class="cw-postcard-item-front-craftwaves">
-              <div class="cw-postcard-item-bg-craftwaves">
-                <img
-                  src="https://cdn.cuberto.com/cb/hello/postcard/1.jpg"
-                  srcset="
-                    https://cdn.cuberto.com/cb/hello/postcard/1@2x.jpg 2x
-                  "
-                  loading="lazy"
-                  alt
-                />
+            <div class="cw-postcard-item-craftwaves">
+              <div class="cw-postcard-item-back-craftwaves">
+                <div class="cw-postcard-item-title-craftwaves">
+                  Frontend<br />
+                  development
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">Web</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Platforms</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
+                <div class="cw-postcard-item-text-craftwaves">
+                  <p>
+                    Our adaptive design components are built using perfectly
+                    structured and readable code. We develop web services based
+                    on React.js, Next.js, Angular and Vue.js.
+                  </p>
+                </div>
               </div>
-              <div class="cw-postcard-item-title-craftwaves">
-                Mobile<br />
-                development
+              <div class="cw-postcard-item-front-craftwaves">
+                <div class="cw-postcard-item-bg-craftwaves">
+                  <img
+                    src="https://cdn.cuberto.com/cb/hello/postcard/2.jpg"
+                    srcset="
+                      https://cdn.cuberto.com/cb/hello/postcard/2@2x.jpg 2x
+                    "
+                    loading="lazy"
+                    alt
+                  />
+                </div>
+                <div class="cw-postcard-item-title-craftwaves">
+                  Frontend<br />
+                  development
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">Web</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Platforms</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
               </div>
-              <div class="cw-postcard-item-tags-craftwaves">
-                <div class="cw-postcard-item-tag-craftwaves">iOS</div>
-                <div class="cw-postcard-item-tag-craftwaves">Android</div>
+            </div>
+            <div class="cw-postcard-item-craftwaves">
+              <div class="cw-postcard-item-back-craftwaves">
+                <div class="cw-postcard-item-title-craftwaves">
+                  Quality<br />
+                  Assurance
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">A/B testing</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Checklist</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
+                <div class="cw-postcard-item-text-craftwaves">
+                  <p>
+                    We control the quality of products at all stages of
+                    development. We cover the code with tests, conduct
+                    functional and acceptance testing.
+                  </p>
+                </div>
               </div>
-              <div class="cw-postcard-item-arr-craftwaves">
-                <svg class="cw-svgsprite -chevron-right-o-craftwaves">
-                  <use
-                    xlink:href="https://zaki879.github.io/cards/assets/sprites/svgsprites.svg"
-                  ></use>
-                </svg>
+              <div class="cw-postcard-item-front-craftwaves">
+                <div class="cw-postcard-item-bg-craftwaves">
+                  <img
+                    src="https://cdn.cuberto.com/cb/hello/postcard/3.jpg"
+                    srcset="
+                      https://cdn.cuberto.com/cb/hello/postcard/3@2x.jpg 2x
+                    "
+                    loading="lazy"
+                    alt
+                  />
+                </div>
+                <div class="cw-postcard-item-title-craftwaves">
+                  Quality<br />
+                  Assurance
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">A/B testing</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Checklist</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <div class="cw-postcard-item-craftwaves -inverse-craftwaves">
+              <div class="cw-postcard-item-back-craftwaves">
+                <div class="cw-postcard-item-title-craftwaves">
+                  Backend<br />
+                  development
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">Architecture</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Database</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
+                <div class="cw-postcard-item-text-craftwaves">
+                  <p>
+                    We create architecture and thought-over business logic of
+                    online services. Our team helps you select the best internal
+                    and external integration solutions.
+                  </p>
+                </div>
+              </div>
+              <div class="cw-postcard-item-front-craftwaves">
+                <div class="cw-postcard-item-bg-craftwaves">
+                  <img
+                    src="https://cdn.cuberto.com/cb/hello/postcard/4.jpg"
+                    srcset="
+                      https://cdn.cuberto.com/cb/hello/postcard/4@2x.jpg 2x
+                    "
+                    loading="lazy"
+                    alt
+                  />
+                </div>
+                <div class="cw-postcard-item-title-craftwaves">
+                  Backend<br />
+                  development
+                </div>
+                <div class="cw-postcard-item-tags-craftwaves">
+                  <div class="cw-postcard-item-tag-craftwaves">Architecture</div>
+                  <div class="cw-postcard-item-tag-craftwaves">Database</div>
+                </div>
+                <div class="cw-postcard-item-arr-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                    <use
+                      xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
+                    ></use>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
-       
         </div>
-      </div>
-    </section>
+      </section>
+ 
+  
+    </main>
     <script src="assets/js/bundle.js" defer></script>
    
   </body>
