--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Android</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
@@ -69,7 +69,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Android</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
@@ -88,7 +88,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Platforms</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
@@ -122,7 +122,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Platforms</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
@@ -141,7 +141,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Checklist</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
@@ -175,7 +175,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Checklist</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
@@ -194,7 +194,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Database</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
@@ -228,7 +228,7 @@
                   <div class="cw-postcard-item-tag-craftwaves">Database</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
-                  <svg class="cw-svgsprite-craftwaves -chevron-right-o-craftwaves">
+                  <svg class="cw-svgsprite-craftwaves -chevron-right-o">
                     <use
                       xlink:href="/assets/sprites/svgsprites.svg#chevron-right-o"
                     ></use>
