--- a/index.html
+++ b/index.html
@@ -2,25 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <div class="cw-loader-craftwaves cw-loader_overlay-craftwaves -visible">
       <div class="cw-loader_overlay-fill-craftwaves"></div>
       <div class="cw-loader_overlay-box-craftwaves">
-        <div class="cw-loader_overlay-word-craftwaves -v1"><span>We </span></div>
-        <div class="cw-loader_overlay-word-craftwaves -v2"><span>craft</span></div>
-        <div class="cw-loader_overlay-word-craftwaves -v3"><span>Enjoyable</span></div>
+        <div class="cw-loader_overlay-word-craftwaves -v1">
+          <span>We </span>
+        </div>
+        <div class="cw-loader_overlay-word-craftwaves -v2">
+          <span>craft</span>
+        </div>
+        <div class="cw-loader_overlay-word-craftwaves -v3">
+          <span>Enjoyable</span>
+        </div>
         <div class="cw-loader_overlay-word-craftwaves -v4">
           <span>Experiences<span class="-blink">_</span></span>
         </div>
         <div class="cw-loader_overlay-percent-craftwaves"><span>0%</span></div>
       </div>
     </div>
- 
+
     <main id="view-main-craftwaves">
-  
-      <section class="cw-postcard-craftwaves" data-menu-inverse data-cursor="-inverse">
+      <section
+        class="cw-postcard-craftwaves"
+        data-menu-inverse
+        data-cursor="-inverse"
+      >
         <div class="cw-postcard-bg-craftwaves"></div>
         <div class="cw-postcard-content-craftwaves -ct-craftwaves">
           <div class="cw-postcard-items-craftwaves">
@@ -190,7 +199,9 @@
                   development
                 </div>
                 <div class="cw-postcard-item-tags-craftwaves">
-                  <div class="cw-postcard-item-tag-craftwaves">Architecture</div>
+                  <div class="cw-postcard-item-tag-craftwaves">
+                    Architecture
+                  </div>
                   <div class="cw-postcard-item-tag-craftwaves">Database</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
@@ -224,7 +235,9 @@
                   development
                 </div>
                 <div class="cw-postcard-item-tags-craftwaves">
-                  <div class="cw-postcard-item-tag-craftwaves">Architecture</div>
+                  <div class="cw-postcard-item-tag-craftwaves">
+                    Architecture
+                  </div>
                   <div class="cw-postcard-item-tag-craftwaves">Database</div>
                 </div>
                 <div class="cw-postcard-item-arr-craftwaves">
@@ -239,10 +252,27 @@
           </div>
         </div>
       </section>
- 
-  
+        <div
+        class="cw-outro-location-action-craftwaves"
+        style="
+          opacity: 1;
+          translate: none;
+          rotate: none;
+          scale: none;
+          will-change: auto;
+          transform: translate(0px, 0px);
+        "
+      >
+        <a class="cw-btn-craftwaves cw-btn_cta-craftwaves -md -inverse-craftwaves " href="mailto:info@cuberto.com"
+          ><span class="cw-btn_cta-craftwaves-border"></span
+          ><span class="cw-btn_cta-ripple-craftwaves"><span></span></span
+          ><span class="cw-btn_cta-title-craftwaves"
+            ><span data-text="info@cuberto.com">info@cuberto.com</span></span
+          ></a
+        >
+      </div>
+     
     </main>
     <script src="assets/js/bundle.js" defer></script>
-   
   </body>
 </html>
