--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
           ><span class="cw-btn_cta-craftwaves-border"></span
           ><span class="cw-btn_cta-ripple-craftwaves"><span></span></span
           ><span class="cw-btn_cta-title-craftwaves"
-            ><span data-text="info@cuberto.com">info@cuberto.com</span></span
+            ><span data-text="Talk With us">Talk With us</span></span
           ></a
         >
       </div>
