--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <span>We </span>
         </div>
         <div class="cw-loader_overlay-word-craftwaves -v2">
-          <span>craft</span>
+          <span>Craft</span>
         </div>
         <div class="cw-loader_overlay-word-craftwaves -v3">
           <span>Enjoyable</span>
